[gd_scene load_steps=23 format=2]

[ext_resource type="Script" path="res://objects/generic/dynamite_explosion.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bf8viehtq5q04" path="res://sprites/objects/dynamite_explosion/frame15.png" id="2"]
[ext_resource type="Texture2D" uid="uid://w4kyvnap061j" path="res://sprites/objects/dynamite_explosion/frame03.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bbg71ro63lxg6" path="res://sprites/objects/dynamite_explosion/frame16.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c4q2litkix5fc" path="res://sprites/objects/dynamite_explosion/frame07.png" id="5"]
[ext_resource type="Texture2D" uid="uid://ceugr3n7v8iy0" path="res://sprites/objects/dynamite_explosion/frame02.png" id="6"]
[ext_resource type="Texture2D" uid="uid://ercpycinao1l" path="res://sprites/objects/dynamite_explosion/frame08.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b66p1kudkg1mm" path="res://sprites/objects/dynamite_explosion/frame17.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cnt7jakhd6381" path="res://sprites/objects/dynamite_explosion/frame18.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bqaj7g3r4k4lq" path="res://sprites/objects/dynamite_explosion/frame06.png" id="10"]
[ext_resource type="AudioStream" uid="uid://c6ryb1xcg7gd5" path="res://sounds/barrel/keg_boom.ogg" id="11"]
[ext_resource type="Texture2D" uid="uid://dgv022s4nvp2b" path="res://sprites/objects/dynamite_explosion/frame13.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dxx5h2uhip1nm" path="res://sprites/objects/dynamite_explosion/frame11.png" id="13"]
[ext_resource type="Texture2D" uid="uid://bc15eontng8n0" path="res://sprites/objects/dynamite_explosion/frame01.png" id="14"]
[ext_resource type="Texture2D" uid="uid://bectkoj3h6afo" path="res://sprites/objects/dynamite_explosion/frame09.png" id="15"]
[ext_resource type="Texture2D" uid="uid://cg70hu7yjalfi" path="res://sprites/objects/dynamite_explosion/frame10.png" id="16"]
[ext_resource type="Texture2D" uid="uid://duvoga03myyhd" path="res://sprites/objects/dynamite_explosion/frame04.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b8dd1pw2p3g4b" path="res://sprites/objects/dynamite_explosion/frame14.png" id="18"]
[ext_resource type="Texture2D" uid="uid://blgl383wq0mux" path="res://sprites/objects/dynamite_explosion/frame05.png" id="19"]
[ext_resource type="Texture2D" uid="uid://d24yc56tpae6w" path="res://sprites/objects/dynamite_explosion/frame12.png" id="20"]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 51.5801, 44.4649 )

[node name="DynamiteExplosion" type="Area2D"]
collision_layer = 0
collision_mask = 2370
script = ExtResource( 1 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 0, -27.207 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.05176e-05, -26.1805 )
shape = SubResource( 2 )
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
